# 2026-jan-pu-Intercom-clone-01

./: .env.example  .gitignore  .p-replicator.json  .skills-bto.json  CLAUDE.md  DEVELOPMENT_GUIDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: feature-roadmap.json  settings.json
.claude/agents/: architect.md  bto-judge-panel.md  bto-optimizer-worker.md  code-reviewer.md  planner.md  tdd-guide.md
.claude/commands/: bto-build.md  bto-optimize.md  bto-test.md  bto.md  deploy.md  docs.md  feature.md  go.md  myinsights.md  plan.md  review.md  run.md  start.md  test.md
.claude/hooks/: feature-context.py
README/: index.md
admin/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
alembic/: env.py
cjm-app/: index.html  package-lock.json  package.json
docs/: Architecture.md  Completion.md  Final_Summary.md  M3-market-competition.md  M4-business-finance.md  M5-growth-engine.md  PRD.md  Pseudocode.md  Refinement.md  Research_Findings.md  Solution_Strategy.md  Specification.md  cjm-cloudru-consultant.html  cjm-prototype.html  intercom-fact-sheet.md  micro-trends-research-2025-2026.md  research-ai-cloud-consulting.md  test-scenarios.md  validation-report.md
nginx/: nginx.conf
prompts/: ai_factory.md  architect.md  compliance.md  cost_calculator.md  human_escalation.md  migration.md
scripts/: index_documents.py  seed_data.py
tests/: conftest.py
widget/: Dockerfile  demo.html  package-lock.json  package.json  tsconfig.json
(+217 files in other folders)
